--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,2 @@
 spring.application.name=stockManagementSystem
-server.port:8081
-spring.data.mongodb.uri=mongodb+srv://admin:admin@stockmanagementsystemda.x4gsheb.mongodb.net/?retryWrites=true&w=majority&appName=stockManagementSystemData/mongodemo
+spring.data.mongodb.uri=mongodb+srv://admin:admin@stockmanagementsystemda.x4gsheb.mongodb.net/stockManagementSystemData
